--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -195,7 +195,8 @@
 
   <br>
   <a class="myButton" href="{% url 'conceitos_obtidos' projeto.id %}">Avaliações</a>
-
+  <a class="myButton" href="{% url 'bancas_lista' projeto.id %}">Bancas</a>
+  
   <p>&nbsp;</p>
 
 {% endblock %}
