--- a/projetos/templates/projetos/bancas_editar.html
+++ b/projetos/templates/projetos/bancas_editar.html
@@ -21,30 +21,54 @@
 {% endblock %}
 
 {% block content %}
+
   {% if projetos %}
     <form method="post" id="criarbancasform" enctype="multipart/form-data">
       {% csrf_token %}
       <label for="projeto">Projeto:</label>
       <select name="projeto" id="projeto" title="Selecione o projeto"
       style="width:700px;" required>
-          {% for projeto in projetos %}
-            <option value="{{projeto.id}}"
-            data-titulo="{{projeto.titulo}}"
-            data-organizacao="{{projeto.organizacao}}"
-            data-orientador="{{projeto.orientador}}"
-            {% if projeto.id == banca.projeto.id %} selected {% endif %}
-            >
-              {{projeto.ano}}.{{projeto.semestre}} -
-              {{projeto.titulo}}
-              ({{projeto.organizacao}})
-              [{{projeto.orientador}}]
-            </option>  
-          {% endfor %}
+        {% if not banca %}
+          <option disabled selected value> -- selecione um projeto -- </option>
+        {% endif %}
+        {% for projeto in projetos %}
+          <option value="{{projeto.id}}"
+          data-titulo="{{projeto.titulo}}"
+          data-organizacao="{{projeto.organizacao}}"
+          data-orientador="{{projeto.orientador}}"
+          {% if projeto.id == banca.projeto.id %} selected {% endif %}
+          >
+            {{projeto.ano}}.{{projeto.semestre}}
+            ({{projeto.organizacao}})
+            {{projeto.titulo}}
+            [{{projeto.orientador}}]
+          </option>  
+        {% endfor %}
       </select><br><br>
 
-      Título: <label id="titulo" name="titulo">{{banca.projeto.titulo}}</label><br>
-      Organização: <label id="organizacao" name="organizacao">{{banca.projeto.organizacao}}</label><br>
-      Orientador: <label id="orientador" name="orientador">{{banca.projeto.orientador}}</label><br>
+      Título: <label id="titulo" name="titulo">
+        {% if banca and banca.projeto %}
+          {{banca.projeto.get_titulo}}
+        {% else %}
+          Titulo de Projeto não definido
+        {% endif %}
+      </label><br>
+
+      Organização: <label id="organizacao" name="organizacao">
+        {% if banca and banca.projeto and banca.projeto.organizacao %}
+          {{banca.projeto.organizacao}}
+        {% else %}
+          Organização Parceira não definida
+        {% endif %}
+      </label><br>
+      
+      Orientador(a): <label id="orientador" name="orientador">
+        {% if banca and banca.projeto and banca.projeto.orientador %}
+          {{banca.projeto.orientador}}
+        {% else %}
+          Sem identificação de Orientador(a)
+        {% endif %}
+      </label><br>
 
       <br>
       Tipo de banca:<br>
@@ -67,10 +91,20 @@
       </script>
 
       <br>
-      <div> 
-        <label for="inicio">Inicio:</label> <input id="inicio" type="datetime-local" name="inicio" value="{{banca.startDate|date:'Y-m-d\TH:i:s'}}" required>
+      <div>
+        <label for="inicio">Inicio:</label> 
+        <input id="inicio" type="datetime-local" name="inicio" 
+        {% if banca %}
+          value="{{banca.startDate|date:'Y-m-d\TH:i:s'}}" 
+        {% endif %} 
+        required>
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <label for="inicio">Fim:</label> <input id="fim" type="datetime-local" name="fim" value="{{banca.endDate|date:'Y-m-d\TH:i:s'}}" required>
+        <label for="fim">Fim:</label>
+        <input id="fim" type="datetime-local" name="fim"
+        {% if banca %}
+          value="{{banca.endDate|date:'Y-m-d\TH:i:s'}}" 
+        {% endif %} 
+        required>
       </div><br>
 
       <script>
@@ -100,10 +134,18 @@
         });
       </script>
 
-      <label for="local">Local:</label> <input id="local" name="local" type="text" size="48" value="{{banca.location}}"/><br>
+      <label for="local">Local:</label> <input id="local" name="local" type="text" size="48" 
+      {% if banca %}
+        value="{{banca.location}}"
+      {% endif %} 
+      /><br>
       <br>
 
-      <label for="link">Link de Vídeo-conferência:</label> <input id="link" name="link" type="text" size="40" value="{{banca.link}}"/><br>
+      <label for="link">Link de Vídeo-conferência:</label> <input id="link" name="link" type="text" size="40"
+      {% if banca %}
+        value="{{banca.link}}"
+      {% endif %} 
+      /><br>
       <br>
 
       <label for="membro1">Membro 1 da Banca:</label>
