Novos Apps de estudantes e parceiros

--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -80,7 +80,7 @@
     </a>
     
     {% comment %} INFORMAÇÕES ADICIONAIS {% endcomment %}
-    <a href="{% url 'submissao' %}">
+    <a href="{% url 'informacoes_adicionais' %}">
         <h5>Formulário de Informações Adicionais</h5>
     </a>
 
