--- a/projetos/templates/generic.html
+++ b/projetos/templates/generic.html
@@ -24,7 +24,7 @@
     {% endif %}
 
     {% if area_aluno %}
-        <a href="{% url 'index_estudante' %}">Ir para Área dos Estudantes</a><br>
+        <a href="{% url 'index_estudantes' %}">Ir para Área dos Estudantes</a><br>
     {% endif %}
 
     {% if bancas_index %}
