--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -26,7 +26,7 @@
             {% endif %}
         </h4>
     {% else %}
-        <h5>Somente visualização das opções de encontros (você não está registardo como aluno)</h5>
+        <h5>Somente visualização das opções de encontros (você não está registrado como estudante)</h5>
     {% endif %}
     <br><br>
     <div class="control"></div>
