Criação de Apps de Professores, Documentos e Propostas

--- a/estudantes/templates/estudantes/encontros_marcar.html
+++ b/estudantes/templates/estudantes/encontros_marcar.html
@@ -22,7 +22,7 @@
             {% if projeto %}
                 {{projeto.get_titulo}}
             {% else %}
-                < PROJETO NÃO ENCONTRADO >
+                &lt; PROJETO NÃO ENCONTRADO &gt;
             {% endif %}
         </h4>
     {% else %}
