--- a/projetos/templates/generic.html
+++ b/projetos/templates/generic.html
@@ -40,7 +40,7 @@
     {% endif %}
 
     {% if organizacoes_prospectadas %}
-        <a href="{% url 'organizacoes_prospectadas' %}">Lista de organizações prospectadas</a><br>
+        <a href="{% url 'organizacoes_prospect' %}">Lista de organizações prospectadas</a><br>
     {% endif %}
 
     {% if propostas_lista %}
