--- a/projetos/templates/index_operacional.html
+++ b/projetos/templates/index_operacional.html
@@ -13,7 +13,7 @@
     <h5>Listagem completa</h5>
     <ul>
         <a href="{% url 'alunos_lista' %}"><li>Estudantes</li></a>
-        <a href="{% url 'propostas_lista' %}"><li>Propostas</li></a>
+        <a href="{% url 'propostas_apresentadas' %}"><li>Propostas</li></a>
         <a href="{% url 'projetos_lista' 'todos' %}"><li>Projetos</li></a>
         <a href="{% url 'organizacoes_lista' %}"><li>Organizações</li></a>
         <a href="{% url 'todos_parceiros' %}"><li>Parceiros</li></a>
