mais organizações gerais

--- a/administracao/templates/administracao/carregar.html
+++ b/administracao/templates/administracao/carregar.html
@@ -9,9 +9,9 @@
 
 <span class="titulo">Carregar dados</span>
 
-<a href="{% url 'carrega' 'disciplinas' %}"><h5>disciplinas</h5></a>
-<a href="{% url 'carrega' 'alunos' %}"><h5>estudantes</h5></a>
-<a href="{% url 'carrega' 'avaliacoes' %}"><h5>avaliações</h5></a>
+<a href="{% url 'carrega_arquivo' 'disciplinas' %}"><h5>disciplinas</h5></a>
+<a href="{% url 'carrega_arquivo' 'estudantes' %}"><h5>estudantes</h5></a>
+<a href="{% url 'carrega_arquivo' 'avaliacoes' %}"><h5>avaliações</h5></a>
 <br>
 <br>
 {% endblock %}
