--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -23,6 +23,6 @@
     <a href="{% url 'exportar' %}"><h5>Relatórios/Exportar dados</h5></a>
     <a href="{% url 'montar_grupos' %}"><h5>Montar Grupos para Projetos</h5></a>
     <a href="{% url 'propor' %}"><h5>Propor Grupos para Projetos</h5></a>
-    <a href="{% url 'carregar' %}"><h5>Carregar dados</h5></a>
+    <a href="{% url 'index_carregar' %}"><h5>Carregar dados</h5></a>
 
 {% endblock %}
