--- a/professores/templates/professores/resultado_avaliacoes.html
+++ b/professores/templates/professores/resultado_avaliacoes.html
@@ -29,68 +29,72 @@
   <label><input id="orientador" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide())" type="checkbox" /> Orientador</label>&nbsp;&nbsp;&nbsp;
 
   <table  id="ProjetosTable" class="projetos">
-    <tr>
-      <th style="border-right:0px; border-left:0px;"></th>
-      <th style="border-right:0px; border-left:0px;"></th>
-      <th style="border-right:0px; border-left:0px;"></th>
-      <th colspan="3" class="text-center">
-      <b>Bancas</b>
-      </th>
-    </tr>
-    <tr>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inte.</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
-      <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
-    </tr>      
 
-    {% for projeto, banca_intermediaria, banca_final, banca_falconi in tabela %} 
-    <tr class="item">
-        <td>
-          <a href="{% url 'projeto_completo' projeto.id %}">
-          {{projeto.get_titulo}}<br>
-          </a>
-        </td>
-        <td>
-          <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
-            {{ projeto.organizacao.nome }}
-          </a>
-        </td>
-        <td>
-          {% if projeto.orientador %}
-            <a href="{% url 'professor_detail' projeto.orientador.id %}">
-              {{ projeto.orientador }}
+    {% if tabela %}
+      <tr>
+        <th style="border-right:0px; border-left:0px;"></th>
+        <th style="border-right:0px; border-left:0px;"></th>
+        <th style="border-right:0px; border-left:0px;"></th>
+        <th colspan="3" class="text-center">
+        <b>Bancas</b>
+        </th>
+      </tr>
+      <tr>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inte.</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
+      </tr>      
+
+      {% for projeto, banca_intermediaria, banca_final, banca_falconi in tabela %} 
+      <tr class="item">
+          <td>
+            <a href="{% url 'projeto_completo' projeto.id %}">
+            {{projeto.get_titulo}}<br>
             </a>
-            {% else %}
-              Orientador não definido
-            {% endif %}
-        </td>
-        <td class="text-center" style="white-space: nowrap;">
-          <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_intermediaria.1 }}">
-            {{ banca_intermediaria.0|safe }}
-          </a>
-        </td>
-        <td class="text-center" style="white-space: nowrap;">
-          <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_final.1 }}">
-            {{ banca_final.0|safe }}
-          </a>
-        </td>
-        <td class="text-center" style="white-space: nowrap;">
-          <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_falconi.1 }}">
-            {{ banca_falconi.0|safe }}
-          </a>
-        </td>
+          </td>
+          <td>
+            <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
+              {{ projeto.organizacao.nome }}
+            </a>
+          </td>
+          <td>
+            {% if projeto.orientador %}
+              <a href="{% url 'professor_detail' projeto.orientador.id %}">
+                {{ projeto.orientador }}
+              </a>
+              {% else %}
+                Orientador não definido
+              {% endif %}
+          </td>
+          <td class="text-center" style="white-space: nowrap;">
+            <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_intermediaria.1 }}">
+              {{ banca_intermediaria.0|safe }}
+            </a>
+          </td>
+          <td class="text-center" style="white-space: nowrap;">
+            <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_final.1 }}">
+              {{ banca_final.0|safe }}
+            </a>
+          </td>
+          <td class="text-center" style="white-space: nowrap;">
+            <a href="{% url 'conceitos_obtidos' projeto.id %}" data-toggle="tooltip" data-html="true" animation="true" title="{{ banca_falconi.1 }}">
+              {{ banca_falconi.0|safe }}
+            </a>
+          </td>
 
-    </tr>
+      </tr>
 
-    {% empty %}
-      <tr><td colspan="4">
-      Não existem projetos disponíveis.
-      </td></tr>
-    {% endfor %}
+      {% empty %}
+        <tr><td colspan="4">
+        Não existem projetos disponíveis.
+        </td></tr>
+      {% endfor %}
     
+    {% endif %}
+
   </table>
   <p>&nbsp;</p>
 
